# sigsegv-interQ

./: .env  .gitignore  README.md  di.py  fastApp.py  main.py  pyproject.toml  settings.yaml
interQ-frontend/: index.html  package-lock.json  package.json
interQ-frontend/src/: App.css  App.jsx
interQ-frontend/src/components/: ChatPage.jsx  Chatbot.css  CopyButton.jsx  HomePage.jsx  QuestionsPage.jsx  ResumePage.jsx  SkillCard.jsx  SkillsPage.jsx
settings/: settings.py  settings_loader.py
setup/: addDataToDb.py  createDb.py  setup_postgres.sh
sigsegv_interq/: filteredskills.py
sigsegv_interq/config/: logger.py
sigsegv_interq/qa/: askRoute.py  queryService.py  questionGenService.py
sigsegv_interq/resume_parser/: resume_parser.py  utils.py
